src/omdParser/OMDParser.cpp

#include "antlr4-runtime.h"
#include "utils/StringUtils.hpp"
#include "omdParser/FilenameObserver.hpp"


// Generated from OMD.g4 by ANTLR 4.13.2


#include "OMDListener.h"
#include "OMDVisitor.h"

#include "OMDParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct OMDParserStaticData final {
  OMDParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  OMDParserStaticData(const OMDParserStaticData&) = delete;
  OMDParserStaticData(OMDParserStaticData&&) = delete;
  OMDParserStaticData& operator=(const OMDParserStaticData&) = delete;
  OMDParserStaticData& operator=(OMDParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag omdParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<OMDParserStaticData> omdParserStaticData = nullptr;

void omdParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (omdParserStaticData != nullptr) {
    return;
  }
#else
  assert(omdParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<OMDParserStaticData>(
    std::vector<std::string>{
      "omdfile", "statement", "assignment", "constant", "componentblock", 
      "zconstraintblock", "restraintblock", "flucqblock", "rnemdblock", 
      "lightblock", "velocityfieldblock", "minimizerblock", "moleculeblock", 
      "moleculestatement", "atomblock", "atomstatement", "bondblock", "bondstatement", 
      "bendblock", "bendstatement", "torsionblock", "torsionstatement", 
      "inversionblock", "inversionstatement", "rigidbodyblock", "rigidbodystatement", 
      "cutoffgroupblock", "cutoffgroupstatement", "nodesblock", "nodesstatement", 
      "fragmentblock", "fragmentstatement", "constraintblock", "constraintstatement", 
      "sequencestring", "doubleNumberTuple", "inttuple", "intConst", "doubleNumber", 
      "floatConst", "vectorConst"
    },
    std::vector<std::string>{
      "", "'true'", "'false'", "'component'", "'molecule'", "'zconstraint'", 
      "'restraint'", "'atom'", "'bond'", "'bend'", "'torsion'", "'inversion'", 
      "'rigidBody'", "'cutoffGroup'", "'constraint'", "'distance'", "'fragment'", 
      "'sequence'", "'members'", "'center'", "'satellites'", "'position'", 
      "'orientation'", "'flucQ'", "'RNEMD'", "'light'", "'velocityField'", 
      "'minimizer'", "'Fixed'", "'Harmonic'", "'Cubic'", "'Quartic'", "'Polynomial'", 
      "'Morse'", "'GhostBend'", "'UreyBradley'", "'Cosine'", "'GhostTorsion'", 
      "'Charmm'", "'Opls'", "'Trappe'", "'AmberImproper'", "'ImproperCosine'", 
      "'CentralAtomHeight'", "'Dreiding'", "'charge'", "'nodes'", "'='", 
      "':'", "','", "'\\u003F'", "';'", "'.'", "'('", "')'", "'['", "']'", 
      "'{'", "'}'"
    },
    std::vector<std::string>{
      "", "TRUE", "FALSE", "COMPONENT", "MOLECULE", "ZCONSTRAINT", "RESTRAINT", 
      "ATOM", "BOND", "BEND", "TORSION", "INVERSION", "RIGIDBODY", "CUTOFFGROUP", 
      "CONSTRAINT", "DISTANCE", "FRAGMENT", "SEQUENCE", "MEMBERS", "CENTER", 
      "SATELLITES", "POSITION", "ORIENTATION", "FLUCQ", "RNEMD", "LIGHT", 
      "VELOCITYFIELD", "MINIMIZER", "FIXED", "HARMONIC", "CUBIC", "QUARTIC", 
      "POLYNOMIAL", "MORSE", "GHOSTBEND", "UREYBRADLEY", "COSINE", "GHOSTTORSION", 
      "CHARMM", "OPLS", "TRAPPE", "AMBERIMPROPER", "IMPROPERCOSINE", "CENTRALATOMHEIGHT", 
      "DREIDING", "CHARGE", "NODES", "ASSIGNEQUAL", "COLON", "COMMA", "QUESTIONMARK", 
      "SEMICOLON", "DOT", "LPAREN", "RPAREN", "LBRACKET", "RBRACKET", "LCURLY", 
      "RCURLY", "NUM_LONG", "NUM_INT", "NUM_FLOAT", "NUM_DOUBLE", "CharLiteral", 
      "StringLiteral", "ID", "Whitespace", "Newline", "LineContinuation", 
      "Comment", "CPPComment", "PREPROC_DIRECTIVE"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  omdParserStaticData = std::move(staticData);
}

}

OMDParser::OMDParser(TokenStream *input) : OMDParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

OMDParser::OMDParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  OMDParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *omdParserStaticData->atn, omdParserStaticData->decisionToDFA, omdParserStaticData->sharedContextCache, options);
}

OMDParser::~OMDParser() {
  delete _interpreter;
}

const atn::ATN& OMDParser::getATN() const {
  return *omdParserStaticData->atn;
}

std::string OMDParser::getGrammarFileName() const {
  return "OMD.g4";
}

const std::vector<std::string>& OMDParser::getRuleNames() const {
  return omdParserStaticData->ruleNames;
}

const dfa::Vocabulary& OMDParser::getVocabulary() const {
  return omdParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView OMDParser::getSerializedATN() const {
  return omdParserStaticData->serializedATN;
}


//----------------- OmdfileContext ------------------------------------------------------------------

OMDParser::OmdfileContext::OmdfileContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* OMDParser::OmdfileContext::EOF() {
  return getToken(OMDParser::EOF, 0);
}

std::vector<OMDParser::StatementContext *> OMDParser::OmdfileContext::statement() {
  return getRuleContexts<OMDParser::StatementContext>();
}

OMDParser::StatementContext* OMDParser::OmdfileContext::statement(size_t i) {
  return getRuleContext<OMDParser::StatementContext>(i);
}


size_t OMDParser::OmdfileContext::getRuleIndex() const {
  return OMDParser::RuleOmdfile;
}

void OMDParser::OmdfileContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OMDListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterOmdfile(this);
}

void OMDParser::OmdfileContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OMDListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitOmdfile(this);
}


std::any OMDParser::OmdfileContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<OMDVisitor*>(visitor))
    return parserVisitor->visitOmdfile(this);
  else
    return visitor->visitChildren(this);
}

OMDParser::OmdfileContext* OMDParser::omdfile() {
  OmdfileContext *_localctx = _tracker.createInstance<OmdfileContext>(_ctx, getState());
  enterRule(_localctx, 0, OMDParser::RuleOmdfile);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(85);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (((((_la - 3) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 3)) & 4611686018459901967) != 0)) {
      setState(82);
      statement();
      setState(87);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(88);
    match(OMDParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

OMDParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

OMDParser::AssignmentContext* OMDParser::StatementContext::assignment() {
  return getRuleContext<OMDParser::AssignmentContext>(0);
}

OMDParser::ComponentblockContext* OMDParser::StatementContext::componentblock() {
  return getRuleContext<OMDParser::ComponentblockContext>(0);
}

OMDParser::MoleculeblockContext* OMDParser::StatementContext::moleculeblock() {
  return getRuleContext<OMDParser::MoleculeblockContext>(0);
}

OMDParser::FragmentblockContext* OMDParser::StatementContext::fragmentblock() {
  return getRuleContext<OMDParser::FragmentblockContext>(0);
}

OMDParser::ZconstraintblockContext* OMDParser::StatementContext::zconstraintblock() {
  return getRuleContext<OMDParser::ZconstraintblockContext>(0);
}

OMDParser::RestraintblockContext* OMDParser::StatementContext::restraintblock() {
  return getRuleContext<OMDParser::RestraintblockContext>(0);
}

OMDParser::FlucqblockContext* OMDParser::StatementContext::flucqblock() {
  return getRuleContext<OMDParser::FlucqblockContext>(0);
}

OMDParser::RnemdblockContext* OMDParser::StatementContext::rnemdblock() {
  return getRuleContext<OMDParser::RnemdblockContext>(0);
}

OMDParser::LightblockContext* OMDParser::StatementContext::lightblock() {
  return getRuleContext<OMDParser::LightblockContext>(0);
}

OMDParser::VelocityfieldblockContext* OMDParser::StatementContext::velocityfieldblock() {
  return getRuleContext<OMDParser::VelocityfieldblockContext>(0);
}

OMDParser::MinimizerblockContext* OMDParser::StatementContext::minimizerblock() {
  return getRuleContext<OMDParser::MinimizerblockContext>(0);
}


size_t OMDParser::StatementContext::getRuleIndex() const {
  return OMDParser::RuleStatement;
}

void OMDParser::StatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OMDListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatement(this);
}

void OMDParser::StatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OMDListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatement(this);
}


std::any OMDParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<OMDVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

OMDParser::StatementContext* OMDParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 2, OMDParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(101);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case OMDParser::ID: {
        enterOuterAlt(_localctx, 1);
        setState(90);
        assignment();
        break;
      }

      case OMDParser::COMPONENT: {
        enterOuterAlt(_localctx, 2);
        setState(91);
        componentblock();
        break;
      }

      case OMDParser::MOLECULE: {
        enterOuterAlt(_localctx, 3);
        setState(92);
        moleculeblock();
        break;
      }

      case OMDParser::FRAGMENT: {
        enterOuterAlt(_localctx, 4);
        setState(93);
        fragmentblock();
        break;
      }

      case OMDParser::ZCONSTRAINT: {
        enterOuterAlt(_localctx, 5);
        setState(94);
        zconstraintblock();
        break;
      }

      case OMDParser::RESTRAINT: {
        enterOuterAlt(_localctx, 6);
        setState(95);
        restraintblock();
        break;
      }

      case OMDParser::FLUCQ: {
        enterOuterAlt(_localctx, 7);
        setState(96);
        flucqblock();
        break;
      }

      case OMDParser::RNEMD: {
        enterOuterAlt(_localctx, 8);
        setState(97);
        rnemdblock();
        break;
      }

      case OMDParser::LIGHT: {
        enterOuterAlt(_localctx, 9);
        setState(98);
        lightblock();
        break;
      }

      case OMDParser::VELOCITYFIELD: {
        enterOuterAlt(_localctx, 10);
        setState(99);
        velocityfieldblock();
        break;
      }

      case OMDParser::MINIMIZER: {
        enterOuterAlt(_localctx, 11);
        setState(100);
        minimizerblock();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AssignmentContext ------------------------------------------------------------------

OMDParser::AssignmentContext::AssignmentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* OMDParser::AssignmentContext::ID() {
  return getToken(OMDParser::ID, 0);
}

tree::TerminalNode* OMDParser::AssignmentContext::ASSIGNEQUAL() {
  return getToken(OMDParser::ASSIGNEQUAL, 0);
}

OMDParser::ConstantContext* OMDParser::AssignmentContext::constant() {
  return getRuleContext<OMDParser::ConstantContext>(0);
}

tree::TerminalNode* OMDParser::AssignmentContext::SEMICOLON() {
  return getToken(OMDParser::SEMICOLON, 0);
}


size_t OMDParser::AssignmentContext::getRuleIndex() const {
  return OMDParser::RuleAssignment;
}

void OMDParser::AssignmentContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OMDListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAssignment(this);
}

void OMDParser::AssignmentContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OMDListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAssignment(this);
}


std::any OMDParser::AssignmentContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<OMDVisitor*>(visitor))
    return parserVisitor->visitAssignment(this);
  else
    return visitor->visitChildren(this);
}

OMDParser::AssignmentContext* OMDParser::assignment() {
  AssignmentContext *_localctx = _tracker.createInstance<AssignmentContext>(_ctx, getState());
  enterRule(_localctx, 4, OMDParser::RuleAssignment);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(103);
    match(OMDParser::ID);
    setState(104);
    match(OMDParser::ASSIGNEQUAL);
    setState(105);
    constant();
    setState(106);
    match(OMDParser::SEMICOLON);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConstantContext ------------------------------------------------------------------

OMDParser::ConstantContext::ConstantContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

OMDParser::IntConstContext* OMDParser::ConstantContext::intConst() {
  return getRuleContext<OMDParser::IntConstContext>(0);
}

OMDParser::FloatConstContext* OMDParser::ConstantContext::floatConst() {
  return getRuleContext<OMDParser::FloatConstContext>(0);
}

OMDParser::VectorConstContext* OMDParser::ConstantContext::vectorConst() {
  return getRuleContext<OMDParser::VectorConstContext>(0);
}

tree::TerminalNode* OMDParser::ConstantContext::TRUE() {
  return getToken(OMDParser::TRUE, 0);
}

tree::TerminalNode* OMDParser::ConstantContext::FALSE() {
  return getToken(OMDParser::FALSE, 0);
}

tree::TerminalNode* OMDParser::ConstantContext::ID() {
  return getToken(OMDParser::ID, 0);
}

tree::TerminalNode* OMDParser::ConstantContext::StringLiteral() {
  return getToken(OMDParser::StringLiteral, 0);
}


size_t OMDParser::ConstantContext::getRuleIndex() const {
  return OMDParser::RuleConstant;
}

void OMDParser::ConstantContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OMDListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterConstant(this);
}

void OMDParser::ConstantContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OMDListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitConstant(this);
}


std::any OMDParser::ConstantContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<OMDVisitor*>(visitor))
    return parserVisitor->visitConstant(this);
  else
    return visitor->visitChildren(this);
}

OMDParser::ConstantContext* OMDParser::constant() {
  ConstantContext *_localctx = _tracker.createInstance<ConstantContext>(_ctx, getState());
  enterRule(_localctx, 6, OMDParser::RuleConstant);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(115);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case OMDParser::NUM_LONG:
      case OMDParser::NUM_INT: {
        enterOuterAlt(_localctx, 1);
        setState(108);
        intConst();
        break;
      }

      case OMDParser::NUM_FLOAT:
      case OMDParser::NUM_DOUBLE: {
        enterOuterAlt(_localctx, 2);
        setState(109);
        floatConst();
        break;
      }

      case OMDParser::LPAREN: {
        enterOuterAlt(_localctx, 3);
        setState(110);
        vectorConst();
        break;
      }

      case OMDParser::TRUE: {
        enterOuterAlt(_localctx, 4);
        setState(111);
        match(OMDParser::TRUE);
        break;
      }

      case OMDParser::FALSE: {
        enterOuterAlt(_localctx, 5);
        setState(112);
        match(OMDParser::FALSE);
        break;
      }

      case OMDParser::ID: {
        enterOuterAlt(_localctx, 6);
        setState(113);
        match(OMDParser::ID);
        break;
      }

      case OMDParser::StringLiteral: {
        enterOuterAlt(_localctx, 7);
        setState(114);
        match(OMDParser::StringLiteral);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ComponentblockContext ------------------------------------------------------------------

OMDParser::ComponentblockContext::ComponentblockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* OMDParser::ComponentblockContext::COMPONENT() {
  return getToken(OMDParser::COMPONENT, 0);
}

tree::TerminalNode* OMDParser::ComponentblockContext::LCURLY() {
  return getToken(OMDParser::LCURLY, 0);
}

tree::TerminalNode* OMDParser::ComponentblockContext::RCURLY() {
  return getToken(OMDParser::RCURLY, 0);
}

std::vector<OMDParser::AssignmentContext *> OMDParser::ComponentblockContext::assignment() {
  return getRuleContexts<OMDParser::AssignmentContext>();
}

OMDParser::AssignmentContext* OMDParser::ComponentblockContext::assignment(size_t i) {
  return getRuleContext<OMDParser::AssignmentContext>(i);
}


size_t OMDParser::ComponentblockContext::getRuleIndex() const {
  return OMDParser::RuleComponentblock;
}
